--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,8 @@ footer {
     border-top: 1px solid white;
     width: 100%;
 }
+
+span {
+    text-decoration: underline;
+    cursor: pointer;
+}
