--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ background: linear-gradient(90deg, rgba(41,2,65,1) 0%, rgba(89,26,80,1) 0%, rgba
     color: #fff;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 iframe {
