--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,7 @@ input:focus {
 input::placeholder {
     color: #ccc; /* Placeholder text color */
 }
+
+#footerSpacing {
+margin-top:25px;margin-bottom:25px;width:100%;height:0;position:relative;
+}
