--- a/styles.css
+++ b/styles.css
@@ -93,3 +93,66 @@ input::placeholder {
 #footerSpacing {
 margin-top:25px;margin-bottom:25px;width:100%;height:0;position:relative;
 }
+
+.headerBack {
+  margin:0;
+  padding:0;
+  top:0;
+  width:100%;
+  height: 50px;
+  background-color: rgba(211, 211, 211, 0.1);
+  margin-bottom:20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+  border: 1px solid black;
+  border-top: none;
+}
+
+.featured-section {
+  margin: 25px;
+  border-radius: 10px;
+    background: rgba(211, 211, 211, 0.05); /* Gradient background */
+    padding: 20px; /* Padding around the featured section */
+    text-align: center;
+  padding-top: 5px;
+  max-height: 20%;
+}
+
+.featured-container {
+    display: flex;
+    justify-content: space-between; /* Space evenly between the games */
+    max-width: 1200px; /* Maximum width for the featured section */
+    margin: 0 auto; /* Center the container */
+    align-items: center;
+}
+
+.featured-game {
+    flex: 1; /* Each featured game takes equal space */
+    width: 50%; /* Each game takes up 50% of the width */
+    max-width: 350px;
+}
+
+.featured-game .game-container {
+    margin: 0; /* Remove margin for game containers */
+    border: 1px solid black;
+}
+
+.feat-button {
+      flex: 1; /* Each featured game takes equal space */
+      max-width: 150px;
+      height: 150px;
+    background: rgba(100, 100, 200, 0.3);
+    border-radius: 100%;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 45px;
+    cursor: pointer;
+    border: 1px solid black;
+}
