--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,10 @@ nav h1 {
     text-align: center;
 }
 
+.game-container:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
 .game-container img {
     width: 100%;
     height: auto;
