--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,8 @@ nav h1 {
 
 .game-container:hover {
     background-color: rgba(255, 255, 255, 0.2);
+      transition: transform 0.3s ease;
+  transform: scale(1.05, 1.05);
 }
 
 .game-container img {
@@ -74,6 +76,7 @@ span {
 }
 
 input {
+  cursor: pointer;
     width: 250px;
     height: 30px; /* Adjust the height as needed */
     padding: 5px 10px; /* Add some padding inside the input for better usability */
@@ -83,6 +86,11 @@ input {
     color: #fff; /* Text color */
     font-size: 16px; /* Adjust the font size as needed */
     transition: border-color 0.3s ease; /* Smooth transition for hover effect */
+}
+
+input:hover {
+  transition: transform 0.3s ease;
+  transform: scale(1.05, 1.05);
 }
 
 input:focus {
@@ -159,4 +167,12 @@ margin-top:25px;margin-bottom:25px;width:100%;height:0;position:relative;
     font-size: 45px;
     cursor: pointer;
     border: 1px solid black;
+}
+
+.feat-button:hover {
+      background: rgba(100, 100, 200, 0.4);
+}
+
+* {
+ transition: all 0.3s ease;
 }
