--- a/styles.css
+++ b/styles.css
@@ -176,3 +176,14 @@ margin-top:25px;margin-bottom:25px;width:100%;height:0;position:relative;
 * {
  transition: all 0.3s ease;
 }
+
+		.circle {
+			width: 50px;
+			height: 50px;
+      background-color: rgba(211, 211, 211, 0.03);
+			border-radius: 50%;
+			position: absolute;
+			transition: transform 0.1s ease-in-out;
+      z-index: -1;
+			/* Smooth scaling */
+		}
