--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,7 @@ margin-top:25px;margin-bottom:25px;width:100%;height:0;position:relative;
 }
 
 		.circle {
+			position:fixed;
 			width: 50px;
 			height: 50px;
       background-color: rgba(211, 211, 211, 0.03);
