--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,6 @@ margin-top:25px;margin-bottom:25px;width:100%;height:0;position:relative;
 }
 
 		.circle {
-			position:fixed;
 			width: 50px;
 			height: 50px;
       background-color: rgba(211, 211, 211, 0.03);
@@ -188,3 +187,29 @@ margin-top:25px;margin-bottom:25px;width:100%;height:0;position:relative;
       z-index: -1;
 			/* Smooth scaling */
 		}
+
+    /* favorites */
+    .favorite {
+      border: 2px solid gold;
+      color: gold;
+    }
+
+    img:hover {
+      cursor:pointer;
+    }
+
+    #switchView {
+      position: absolute;
+      right: 0;
+      margin-right:50px;
+      top: 50%;
+      transform: translate(0, -50%);
+      width: 125px;
+      height: 50px;
+      border-radius: 15px;
+      border: 1px solid white;
+      background-color: rgba(31, 31, 31, 0.7);
+      color: white;
+      font-size: 18px;
+      cursor: pointer;
+    }
