--- a/styles.css
+++ b/styles.css
@@ -212,4 +212,11 @@ margin-top:25px;margin-bottom:25px;width:100%;height:0;position:relative;
       color: white;
       font-size: 18px;
       cursor: pointer;
+	    transition: transform 0.3s ease;
     }
+	#switchView:active {
+		transform: scale(0.9, 0.9);
+	}
+#switchView:hover {
+	transform: scale(1.1, 1.1);
+}
